feat: created components and make some styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,27 @@
-<h1 class="teste">Olá</h1>
+<div class="container">
+      <app-input-view />
+      <app-result-view />
+      <app-toolset />
+       <div class="container-buttons">
+        <app-calc-button buttonType="number" text="C" />
+        <app-calc-button buttonType="number" text="()" />
+        <app-calc-button buttonType="number" text="%" />
+        <app-calc-button buttonType="number" text="/" />
+        <app-calc-button buttonType="number" text="7" />
+        <app-calc-button buttonType="number" text="8" />
+        <app-calc-button buttonType="number" text="9" />
+        <app-calc-button buttonType="number" text="X" />
+        <app-calc-button buttonType="number" text="4" />
+        <app-calc-button buttonType="number" text="5" />
+        <app-calc-button buttonType="number" text="6" />
+        <app-calc-button buttonType="number" text="-" />
+        <app-calc-button buttonType="number" text="1" />
+        <app-calc-button buttonType="number" text="2" />
+        <app-calc-button buttonType="number" text="3" />
+        <app-calc-button buttonType="number" text="+" />
+        <app-calc-button buttonType="number" text="+/-" />
+        <app-calc-button buttonType="number" text="0" />
+        <app-calc-button buttonType="number" text="," />
+        <app-calc-button buttonType="number" text="=" />
+      </div>
+</div>
