--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 body {
+  font-family: 'Inter', sans-serif;
   background-color: #010101;
+  color: #FFFFFF;
+  display: flex;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
 }
 
-.container {
-  min-width: 320px;
-  max-width: 414px;
+html, body {
+  height: 100%;
 }
+
