feat: implemented buttons and pass button info to app component.

--- a/src/app/components/calc-button/calc-button.component.css
+++ b/src/app/components/calc-button/calc-button.component.css
@@ -8,6 +8,26 @@ button{
   margin: 5px;
 }
 
+button:hover {
+  background-color: #252525;
+}
+
+button:active {
+  background-color: #121711;
+}
+
 .number {
   color: #FFF;
+}
+
+.clean {
+  color: #f06d68;
+}
+
+.func {
+  color: #78d53e;
+}
+
+.equalsBtn{
+  background-color: #2b840c;
 }
