--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,27 @@
 <div class="container">
-      <app-input-view />
+      <app-input-view #input_view/>
       <app-result-view />
       <app-toolset />
        <div class="container-buttons">
-        <app-calc-button buttonType="number" text="C" />
-        <app-calc-button buttonType="number" text="()" />
-        <app-calc-button buttonType="number" text="%" />
-        <app-calc-button buttonType="number" text="/" />
-        <app-calc-button buttonType="number" text="7" />
-        <app-calc-button buttonType="number" text="8" />
-        <app-calc-button buttonType="number" text="9" />
-        <app-calc-button buttonType="number" text="X" />
-        <app-calc-button buttonType="number" text="4" />
-        <app-calc-button buttonType="number" text="5" />
-        <app-calc-button buttonType="number" text="6" />
-        <app-calc-button buttonType="number" text="-" />
-        <app-calc-button buttonType="number" text="1" />
-        <app-calc-button buttonType="number" text="2" />
-        <app-calc-button buttonType="number" text="3" />
-        <app-calc-button buttonType="number" text="+" />
-        <app-calc-button buttonType="number" text="+/-" />
-        <app-calc-button buttonType="number" text="0" />
-        <app-calc-button buttonType="number" text="," />
-        <app-calc-button buttonType="number" text="=" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="clean" text="C" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="func" text="()" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="func" text="%" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="func" text="/" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="7" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="8" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="9" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="func" text="X" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="4" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="5" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="6" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="func" text="-" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="1" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="2" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="3" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="func" text="+" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="func" text="+/-" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="0" />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number" text="," />
+        <app-calc-button (btnClicked)="btnClicked($event)" buttonType="number equalsBtn" text="=" />
       </div>
 </div>
