--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,26 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+
+.active-input{
+  border: 1px solid green;
+  margin: 10px;
+  height: 100px;
+}
+
+input {
+  background: transparent;
+  border: none;
+  color: #FFF;
+  text-align: right;
+  width: 100%;
+  height: 100%;
+  line-height: 100%;
+  font-size: 52px;
+}
+
+input:focus{
+  outline: none;
+}
+
+
